--- a/assets/main.css
+++ b/assets/main.css
@@ -1,16 +1,30 @@
 /* App-wide styling */
-body {
-    background-color: #0f1116;
-    color: #ffffff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 20px;
+* {
+    margin: 0;
 }
 
-#hero {
+html {
+    font-size: min(1vw, 0.5625vh);
+}
+
+body {
+    background-color: #0f1116;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+#hero {
+    position: relative;
+    background-color: #300;
+    margin: 0;
+    aspect-ratio: 9 / 16;
+    width: 100rem;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
