--- a/assets/main.css
+++ b/assets/main.css
@@ -9,7 +9,7 @@ html {
 
 body {
     background-color: #0f1116;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Noto Sans", sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
