skeleton for settings

--- a/assets/main.css
+++ b/assets/main.css
@@ -57,6 +57,27 @@ body {
     max-width: 1200px;
 }
 
+.radio-buttons input[type="radio"] {
+    display: none;
+}
+
+.radio-buttons span {
+    display: inline-block;
+    margin: 0.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    border: 0.5rem solid #0063B1;
+    border-radius: 2rem;
+    cursor: pointer;
+    min-width: 8.5rem;
+    text-align: center;
+}
+
+.radio-buttons input[type="radio"]:checked + span {
+    background-color: #0063B1;
+    color: #fff;
+}
+
 #preloaded-images {
    position: absolute;
    overflow: hidden;
@@ -65,4 +86,3 @@ body {
    height: 1px;
    width: 1px;
 }
-
